<resources>
    <string name="app_name">RVCE Phase-1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RV College of Engineering</string>
    <string name="nav_header_subtitle">https://rvce.edu.in//</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_principal">Principal</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_key_executives">Key Executives</string>
    <string name="menu_infrastructure">Infrastructure</string>
    <string name="menu_admission">Admission</string>
    <string name="menu_departments">Departments</string>
    <string name="menu_research_rvce">Research @ RVCE</string>
    <string name="menu_incubation_center">Incubation Center</string>
    <string name="menu_industry_institute_interaction">Industry Institute Interaction</string>
    <string name="menu_placement">Placement</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_library">Library</string>
    <string name="menu_ncc_nss">NCC / NSS</string>
    <string name="menu_student_clubs">Student Clubs</string>
    <string name="menu_media_says">Media Says</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_cultural">Cultural</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_career_oppertunity">Career Opportunity</string>
    <string name="menu_nba_rvce_2021">NBA RVCE Status-2021</string>
    <string name="menu_nirf_rvce_2019_2020">NIRF-RVCE 2019-2020</string>
    <string name="menu_ug_pg_programs">UG PG Programs</string>
    <string name="menu_ugc_projects">UGC Projects</string>
    <string name="menu_center_of_excellence">Center of Excellence</string>
    <string name="hometext"> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="array_technology">
        <item>1 . Admission 2021-2022</item>
        <item>2 . B.E - Management Quota Admission 2021-22 @ RVITM</item>
        <item>3 . UG PG Academic Activities Rescheduled</item>
        <item>4 . CCTV Research Center</item>
        <item>5 . NIRF -RVCE DCS DATA 2021</item>
        <item>6 . UG- I Sem Exam Time table April/May 2021</item>
        <item>7 . BE :  Circulars and Notifications</item>
        <item>8 . MTech / MCA : Circulars and Notifications</item>
        <item>9 . Statutory Approvals</item>
        <item>10 . NBA Approvals</item>
        <item>11 . Campus Safety Records</item>
    </string-array>
</resources>